# qgroundcontrol

./: .gitmodules  CMakeLists.txt  CodingStyle.h  QGCExternalLibs.pri  QGCPostLinkCommon.pri  QGCPostLinkInstaller.pri  README.md  qgroundcontrol.pro  qgroundcontrol.qrc
.github/workflows/: android_release.yml
custom-example/: InstrumentValueIcons.qrc  custom.cmake
geojsons/: mip31_29100019300000000001.geojson  mip31_29100019300000003302.geojson  mip31_29100019300000003339.geojson  mip31_29100019301000000000.geojson  mip31_29100019301000000001.geojson  mip31_29100019301000000003.geojson  mip31_29800001990000000001.geojson  mip31_29800001990000000004.geojson  mip31_29800001990000000005.geojson
geojsons/store/: mip31_29100019300000000000.geojson  mip31_29100019300000000002.geojson  mip31_29100019300000000003.geojson  mip31_29100019300000000004.geojson  mip31_29100019300000000005.geojson  mip31_29100019300000003339.geojson  mip31_29100019301000000000.geojson  mip31_29800001990000000000.geojson  mip31_29800001990000000002.geojson  mip31_29800001990000000003.geojson
libs/: CMakeLists.txt
libs/QtKMLLib/: CMakeLists.txt  README.md  main.cc
src/: CMakeLists.txt  KMLHelper.cc  KMLHelper.h  QGCApplication.cc  QGCApplication.h  QGCLoggingCategory.cc  QGCLoggingCategory.h  QGCToolbox.cc  QGCToolbox.h
src/Airmap/: CMakeLists.txt
src/AirspaceManagement/: CMakeLists.txt
src/AutoPilotPlugins/: CMakeLists.txt
src/FirmwarePlugin/: FirmwarePlugin.cc  FirmwarePlugin.h
src/FirmwarePlugin/APM/: APMFirmwarePlugin.cc  APMFirmwarePlugin.h  APMParameterFactMetaData.Rover.4.1.xml  ArduCopterFirmwarePlugin.cc
src/FirmwarePlugin/PX4/: PX4FirmwarePlugin.cc  PX4FirmwarePlugin.h
src/FlightDisplay/: CMakeLists.txt  FlyView.qml  FlyViewInstrumentPanel.qml  FlyViewPoiLayer.qml  FlyViewToolStripActionList.qml  FlyViewWidgetLayer.qml  MultiVehicleList.qml  PoiLayer.cc  PoiLayer.h  PoiLayerController.cc  PoiLayerController.h  PoiLayerVisual.qml  SvgLabelledPoint.qml
src/FlightDisplay/orders/: BrowserWindow.cc  BrowserWindow.h  CMakeLists.txt  OrdersChecker.cc  OrdersChecker.h  OrdersController.cc  OrdersController.h  OrdersViewLayer.qml
src/FlightDisplay/poi/: CMakeLists.txt  DynamicPoiManager.cc  DynamicPoiManager.h  PoiDownloader.cc  PoiDownloader.h  PoiGeom.cc  PoiGeom.h  PoiLayer.cc  PoiLayer.h  PoiLayerController.cc  PoiLayerController.h  PoiLayerLoader.cc  PoiLayerLoader.h  PoiLayerMenuWidget.qml  PoiLayerVisual.qml  PoiPoint.cc  PoiPoint.h  PoiPolygon.cc  PoiPolygon.h  PoiPolyline.cc  PoiPolyline.h  PoiSvg.cc  PoiSvg.h
src/FlightMap/: CMakeLists.txt
src/FlightMap/MapItems/: CMakeLists.txt
src/FlightMap/Widgets/: CMakeLists.txt
src/FollowMe/: FollowMe.cc
src/Joystick/: Joystick.cc  Joystick.h
src/MissionManager/: CMakeLists.txt  MissionController.cc  QGCMapCircle.cc  QGCMapCircle.h  QGCMapGeom.h  QGCMapLayer.cc  QGCMapLayer.h  QGCMapPolygon.h  QGCMapPolyline.cc  QGCMapPolyline.h  QGCMapPolylineTest.cc  QGCMapPolylineTest.h  QGCMapSvgIcon.cc  QGCMapSvgIcon.h
src/QmlControls/: BatteryStatus.qml  CMakeLists.txt  FlightModeMenu.qml  InstrumentValueEditDialog.qml  InstrumentValueLabel.qml  QGCPopupDialogContainer.qml
src/QmlControls/QGroundControl/Controls/: qmldir
src/QmlControls/QGroundControl/FlightDisplay/: qmldir
src/QtLocationPlugin/: CMakeLists.txt  QGCLocationPlugin.pri  QGCMapUrlEngine.cpp  QGCMapUrlEngine.h  WmsMapProvider.cpp  WmsMapProvider.h  WmsServerService.cpp  WmsServerService.h
src/Settings/: CMakeLists.txt
src/Vehicle/: MultiVehicleManager.cc  Vehicle.cc  Vehicle.h
src/VehicleSetup/: JoystickConfigButtons.qml
src/comm/: CMakeLists.txt  LinkManager.cc  MAVLinkProtocol.cc  UDPLink.cc
src/ui/: MainRootWindow.qml
src/ui/preferences/: GeneralSettings.qml
src/ui/toolbar/: BatteryIndicator.qml
translations/: qgc.ts  qgc_source_az_AZ.ts  qgc_source_bg_BG.ts  qgc_source_de_DE.ts  qgc_source_el_GR.ts  qgc_source_es_ES.ts  qgc_source_fi_FI.ts  qgc_source_fr_FR.ts  qgc_source_he_IL.ts  qgc_source_it_IT.ts  qgc_source_ja_JP.ts  qgc_source_ko_KR.ts  qgc_source_nl_NL.ts  qgc_source_no_NO.ts  qgc_source_pl_PL.ts  qgc_source_pt_PT.ts  qgc_source_ru_RU.ts  qgc_source_sv_SE.ts  qgc_source_tr_TR.ts  qgc_source_zh_CN.ts
