add_library(PoiLayers
		PoiLayerController.cc
		PoiLayer.cc)

target_link_libraries(PoiLayers
	PRIVATE
		qgc
		qtkml
		)

target_include_directories(PoiLayers
	PUBLIC
		${CMAKE_CURRENT_SOURCE_DIR}
	)

add_custom_target(FlightDisplayQml
	SOURCES
		DefaultChecklist.qml
		FixedWingChecklist.qml
		FlightDisplayViewDummy.qml
		FlightDisplayViewUVC.qml
		FlightDisplayViewVideo.qml
		FlightDisplayViewWidgets.qml
		FlyViewAirspaceIndicator.qml
		FlyViewCustomLayer.qml
		FlyViewPoiLayer.qml
		FlyViewInstrumentPanel.qml
		FlyViewMap.qml
		FlyViewMissionCompleteDialog.qml
		FlyViewPreFlightChecklistPopup.qml
		FlyView.qml
		FlyViewToolStripActionList.qml
		FlyViewToolStrip.qml
		FlyViewVideo.qml
		FlyViewWidgetLayer.qml
		GuidedActionActionList.qml
		GuidedActionConfirm.qml
		GuidedActionLand.qml
		GuidedActionList.qml
		GuidedActionPause.qml
		GuidedActionRTL.qml
		GuidedActionsController.qml
		GuidedActionTakeoff.qml
		GuidedAltitudeSlider.qml
		GuidedToolStripAction.qml
		MultiRotorChecklist.qml
		MultiVehicleList.qml
		PoiLayerMenuWidget.qml
		PreFlightBatteryCheck.qml
		PreFlightCheckList.qml
		PreFlightCheckListShowAction.qml
		PreFlightGPSCheck.qml
		PreFlightRCCheck.qml
		PreFlightSensorsHealthCheck.qml
		PreFlightSoundCheck.qml
		ProximityRadarValues.qml
		ProximityRadarVideoView.qml
		RoverChecklist.qml
		SubChecklist.qml
		SvgLabelledPoint.qml
		TelemetryValuesBar.qml
		TerrainProgress.qml
		VehicleWarnings.qml
		VirtualJoystick.qml
		VTOLChecklist.qml
		ObstacleDistanceOverlay.qml
		ObstacleDistanceOverlayMap.qml
		ObstacleDistanceOverlayVideo.qml
)

